--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 pandas==1.3.4
 Pillow==9.3.0
 streamlit==1.11.0
-torch==1.10.1
-torchvision==0.11.2
+streamlit_option_menu==0.3.2
+torch==1.10.1+cu113
+torchvision==0.11.2+cu113
